--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleCatalogo.css">
+    <link rel="stylesheet" href="./responsive.css">
     <script src="https://kit.fontawesome.com/1c2ac6f27a.js" crossorigin="anonymous"></script>
     <title>CONTROLES AMBIENTALES A & B S.A.S</title>
 </head>
