--- a/recomendaciones/recomendaciones.html
+++ b/recomendaciones/recomendaciones.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleRecomendaciones.css">
+    <link rel="stylesheet" href="./responsive_reco.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>CONTROLES AMBIENTALES A & B S.A.S</title>
 </head>
