--- a/recomendaciones/recomendaciones.html
+++ b/recomendaciones/recomendaciones.html
@@ -15,7 +15,7 @@
         </section>
     
         <section class="middle-text">
-            <section><a href="../inicio pagina web/index.html">Inicio</a></section>
+            <section><a href="../index.html">Inicio</a></section>
             <section><a href="../recomendaciones/recomendaciones.html">Recomendaciones</a></section>
             <section><a href="../contactos/contacto.html">¿Quieres que te contactemos?</a></section>
             <section><a href="../catalogo/catalogo.html">Servicios</a></section>
