--- a/proyecto integrador 2semestre/contactos/contacto.html
+++ b/proyecto integrador 2semestre/contactos/contacto.html
@@ -13,8 +13,8 @@
         <img src="./imagenes/Logo.jpeg" alt="" class="imgLogo">
     </section>
 
-    <section class="middle-text">
-        <section><a href="../index.html">Inicio</a></section>
+    <section class="middle-text" style="font-size: 20px;">
+        <section><a href="../inicio pagina web/index.html">Inicio</a></section>
         <section><a href="../recomendaciones/recomendaciones.html">Recomendaciones</a></section>
         <section><a href="../contactos/contacto.html">¿Quieres que te contactemos?</a></section>
         <section><a href="../catalogo/catalogo.html">Servicios</a></section>
