--- a/proyecto integrador 2semestre/catalogo/catalogo.html
+++ b/proyecto integrador 2semestre/catalogo/catalogo.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleCatalogo.css">
-    <link rel="stylesheet" href="./responsive.css">
     <script src="https://kit.fontawesome.com/1c2ac6f27a.js" crossorigin="anonymous"></script>
     <title>CONTROLES AMBIENTALES A & B S.A.S</title>
 </head>
@@ -14,8 +13,8 @@
             <img src="./imagenes/Logo.jpeg" alt="" class="imgLogo">
         </section>
 
-        <section class="middle-text">
-            <section><a href="../index.html">Inicio</a></section>
+        <section class="middle-text" style="font-size: 20px;">
+            <section><a href="../inicio pagina web/index.html">Inicio</a></section>
             <section><a href="../recomendaciones/recomendaciones.html">Recomendaciones</a></section>
             <section><a href="../contactos/contacto.html">¿Quieres que te contactemos?</a></section>
             <section><a href="../catalogo/catalogo.html">Servicios</a></section>
