--- a/proyecto integrador 2semestre/agendamiento de citas/ver-citas.html
+++ b/proyecto integrador 2semestre/agendamiento de citas/ver-citas.html
@@ -12,7 +12,7 @@
             <img src="./imagenes/Logo.jpeg" alt="" class="imgLogo">
         </section>
 
-        <section class="middle-text">
+        <section class="middle-text" style="font-size: 20px;">
             <section><a href="../inicio pagina web/index.html">Inicio</a></section>
             <section><a href="../recomendaciones/recomendaciones.html">Recomendaciones</a></section>
             <section><a href="../contactos/contacto.html">¿Quieres que te contactemos?</a></section>
@@ -38,7 +38,7 @@
       <ul id="lista-citas"></ul>
     </section>
     <section class="verCitas">
-      <a href="../agendamiento de citas/citas.html">Volver</a>
+      <a href="../vistaAdministrador/citas.html">Volver</a>
     </section>
   </main>
   
