--- a/proyecto integrador 2semestre/agendamiento de citas/citas.html
+++ b/proyecto integrador 2semestre/agendamiento de citas/citas.html
@@ -12,8 +12,8 @@
             <img src="./imagenes/Logo.jpeg" alt="" class="imgLogo">
         </section>
 
-        <section class="middle-text">
-            <section><a href="../index.html">Inicio</a></section>
+        <section class="middle-text" style="font-size: 20px;">
+            <section><a href="../inicio pagina web/index.html">Inicio</a></section>
             <section><a href="../recomendaciones/recomendaciones.html">Recomendaciones</a></section>
             <section><a href="../contactos/contacto.html">¿Quieres que te contactemos?</a></section>
             <section><a href="../catalogo/catalogo.html">Servicios</a></section>
@@ -47,6 +47,21 @@
       <label>
         <p>Teléfono:</p>
         <input type="telefono" id="telefono" required>
+      </label>
+      <label>
+        <p>Tipo de servicio:</p>
+        <select id="servicio" required>
+          <option value="">Selecciona un servicio</option>
+          <option value="Arañas">Arañas</option>
+          <option value="Chinches">Chinches</option>
+          <option value="Cucarachas">Cucarachas</option>
+          <option value="Garrapatas">Garrapatas</option>
+          <option value="Hormigas">Hormigas</option>
+          <option value="Moscas">Moscas</option>
+          <option value="Mosquitos">Mosquitos</option>
+          <option value="Pulgas">Pulgas</option>
+          <option value="Ratones">Ratones</option>
+        </select>
       </label>
       <label>
         <p>Fecha:</p>
