--- a/vistaPublica/login.html
+++ b/vistaPublica/login.html
@@ -10,23 +10,23 @@
 <body>
     <header>
         <section class="logo">
-            <img src="../login y registro/imagenes/Logo.jpeg" alt="" class="imgLogo">
+            <img src="./login y registro/imagenes/Logo.jpeg" alt="" class="imgLogo">
         </section>
 
         <section class="middle-text">
-            <section><a href="../vistaPublica/index.html">Inicio</a></section>
-            <section><a href="../vistaPublica/recomendaciones.html">Recomendaciones</a></section>
-            <section><a href="../vistaPublica/contacto.html">¿Quieres que te contactemos?</a></section>
-            <section><a href="../vistaPublica/catalogo.html">Servicios</a></section>
+            <section><a href="./vistaPublica/index.html">Inicio</a></section>
+            <section><a href="./vistaPublica/recomendaciones.html">Recomendaciones</a></section>
+            <section><a href="./vistaPublica/contacto.html">¿Quieres que te contactemos?</a></section>
+            <section><a href="./vistaPublica/catalogo.html">Servicios</a></section>
         </section>
 
         <section class="hamburger">
             <button class="hamburger-boton" onclick="toggleMenu()" style="margin: 0px">☰</button>
             <section class="dropdown" id="menu">
-                <a href="../vistaPublica/login.html">Iniciar Sesión</a>
-                <a href="../vistaPublica/catalogo.html">Catalogo de servicios</a>
-                <a href="../vistaPublica/cotizador/cotizador.html">Cotización</a>
-                <a href="../vistaPublica/login.html de citas/citas.html">Agendamiento de citas</a>
+                <a href="./vistaPublica/login.html">Iniciar Sesión</a>
+                <a href="./vistaPublica/catalogo.html">Catalogo de servicios</a>
+                <a href="./vistaPublica/cotizador/cotizador.html">Cotización</a>
+                <a href="./vistaPublica/login.html de citas/citas.html">Agendamiento de citas</a>
             </section>
         </section>
     </header>
@@ -90,7 +90,7 @@
                     </section>
                 </section>
                 <section>
-                    <img src="../login y registro/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
+                    <img src="./login y registro/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
                 </section>
                 </section>
         </section>
@@ -98,8 +98,8 @@
             <p>© Todos los derechos reservados - 2025</p>
         </section>
     </footer>
-    <script type="module" src="../login y registro/main.js"></script>
-    <script src="../login y registro/script.js"></script>
+    <script type="module" src="./login y registro/main.js"></script>
+    <script src="./login y registro/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
