--- a/vistaPublica/contacto.html
+++ b/vistaPublica/contacto.html
@@ -10,23 +10,23 @@
 <body>
   <header>
     <section class="logo">
-        <img src="../contactos/imagenes/Logo.jpeg" alt="" class="imgLogo">
+        <img src="./contactos/imagenes/Logo.jpeg" alt="" class="imgLogo">
     </section>
 
     <section class="middle-text" style="font-size: 20px;">
-        <section><a href="../vistaPublica/index.html">Inicio</a></section>
-        <section><a href="../vistaPublica/recomendaciones.html">Recomendaciones</a></section>
-        <section><a href="../vistaPublica/contacto.html">¿Quieres que te contactemos?</a></section>
-        <section><a href="../vistaPublica/catalogo.html">Servicios</a></section>
+        <section><a href="./vistaPublica/index.html">Inicio</a></section>
+        <section><a href="./vistaPublica/recomendaciones.html">Recomendaciones</a></section>
+        <section><a href="./vistaPublica/contacto.html">¿Quieres que te contactemos?</a></section>
+        <section><a href="./vistaPublica/catalogo.html">Servicios</a></section>
     </section>
 
     <section class="hamburger">
         <button class="hamburger-button" onclick="toggleMenu()">☰</button>
         <section class="dropdown" id="menu">
-            <a href="../vistaPublica/login.html">Iniciar Sesión</a>
-            <a href="../catalogo/catalogo.html">Catalogo de servicios</a>
-            <a href="../vistaPublica/cotizador/cotizador.html">Cotización</a>
-            <a href="../vistaPublica/login.html">Agendamiento de citas</a>
+            <a href="./vistaPublica/login.html">Iniciar Sesión</a>
+            <a href="./catalogo/catalogo.html">Catalogo de servicios</a>
+            <a href="./vistaPublica/cotizador/cotizador.html">Cotización</a>
+            <a href="./vistaPublica/login.html">Agendamiento de citas</a>
         </section>
     </section>
 </header>
@@ -71,7 +71,7 @@
                     </section>
                 </section>
                 <section>
-                  <img src="../contactos/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
+                  <img src="./contactos/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
                 </section>
               </section>
         </section>
@@ -81,6 +81,6 @@
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="../contactos/contacto.js"></script>
+    <script src="./contactos/contacto.js"></script>
 </body>
 </html>
