--- a/vistaPublica/cotizador/cotizador.html
+++ b/vistaPublica/cotizador/cotizador.html
@@ -9,23 +9,23 @@
 <body>
   <header>
     <section class="logo">
-            <img src="../cotizador/imagenes/Logo.jpeg" alt="" class="imgLogo">
+            <img src="./cotizador/imagenes/Logo.jpeg" alt="" class="imgLogo">
         </section>
 
         <section class="middle-text" style="font-size: 20px;">
-            <section><a href="../index.html">Inicio</a></section>
-            <section><a href="../recomendaciones.html">Recomendaciones</a></section>
-            <section><a href="../contacto.html">¿Quieres que te contactemos?</a></section>
-            <section><a href="../catalogo.html">Servicios</a></section>
+            <section><a href="./index.html">Inicio</a></section>
+            <section><a href="./recomendaciones.html">Recomendaciones</a></section>
+            <section><a href="./contacto.html">¿Quieres que te contactemos?</a></section>
+            <section><a href="./catalogo.html">Servicios</a></section>
         </section>
 
         <section class="hamburger">
             <button class="hamburger-button" onclick="toggleMenu()">☰</button>
             <section class="dropdown" id="menu">
-                <a href="../login.html">Iniciar Sesión</a>
-                <a href="../catalogo.html">Catalogo de servicios</a>
-                <a href="../cotizador/cotizador.html">Cotización</a>
-                <a href="../login.html">Agendamiento de citas</a>
+                <a href="./login.html">Iniciar Sesión</a>
+                <a href="./catalogo.html">Catalogo de servicios</a>
+                <a href="./cotizador/cotizador.html">Cotización</a>
+                <a href="./login.html">Agendamiento de citas</a>
             </section>
         </section>
   </header>
@@ -65,7 +65,7 @@
                 </section>
             </section>
             <section>
-              <img src="../cotizador/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
+              <img src="./cotizador/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
             </section>
           </section>
     </section>
@@ -73,6 +73,6 @@
         <p>© Todos los derechos reservados - 2025</p>
     </section>
   </footer>
-  <script src="../cotizador/cotizador.js"></script>
+  <script src="./cotizador/cotizador.js"></script>
 </body>
 </html>
