--- a/vistaCliente/citas.html
+++ b/vistaCliente/citas.html
@@ -2,21 +2,21 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../agendamiento de citas/styleCitas.css">
+  <link rel="stylesheet" href="./agendamiento de citas/styleCitas.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <title>CONTROLES AMBIENTALES A & B S.A.S</title>
 </head>
 <body>
   <header>
     <section class="logo">
-            <img src="../agendamiento de citas/imagenes/Logo.jpeg" alt="" class="imgLogo">
+            <img src="./agendamiento de citas/imagenes/Logo.jpeg" alt="" class="imgLogo">
         </section>
 
         <section class="middle-text" style="font-size: 20px;">
-            <section><a href="../vistaCliente/index.html">Inicio</a></section>
-            <section><a href="../vistaCliente/recomendaciones.html">Recomendaciones</a></section>
-            <section><a href="../vistaCliente/contacto.html">¿Quieres que te contactemos?</a></section>
-            <section><a href="../vistaCliente/catalogo.html">Servicios</a></section>
+            <section><a href="./vistaCliente/index.html">Inicio</a></section>
+            <section><a href="./vistaCliente/recomendaciones.html">Recomendaciones</a></section>
+            <section><a href="./vistaCliente/contacto.html">¿Quieres que te contactemos?</a></section>
+            <section><a href="./vistaCliente/catalogo.html">Servicios</a></section>
         </section>
 
         <section class="hamburger">
@@ -26,9 +26,9 @@
                     <span id="nombreUsuario">usuario</span>
                     <button class="cerrarSesion" id="btnCerrarSesion">Cerrar Sesión</button>
                 </section>
-                <a href="../vistaCliente/catalogo.html">Catalogo de servicios</a>
-                <a href="../vistaCliente/cotizador/cotizador.html">Cotización</a>
-                <a href="../vistaCliente/citas.html">Agendamiento de citas</a>
+                <a href="./vistaCliente/catalogo.html">Catalogo de servicios</a>
+                <a href="./vistaCliente/cotizador/cotizador.html">Cotización</a>
+                <a href="./vistaCliente/citas.html">Agendamiento de citas</a>
             </section>
         </section>
   </header>
@@ -103,7 +103,7 @@
                 </section>
             </section>
             <section>
-              <img src="../agendamiento de citas/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
+              <img src="./agendamiento de citas/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
             </section>
           </section>
     </section>
@@ -112,8 +112,8 @@
     </section>
   </footer>
 
-  <script src="../agendamiento de citas/citas.js"></script>
-  <script type="module" src="../login y registro/main.js"></script>
+  <script src="./agendamiento de citas/citas.js"></script>
+  <script type="module" src="./login y registro/main.js"></script>
 
 </body>
 </html>
