--- a/vistaCliente/cotizador/cotizador.html
+++ b/vistaCliente/cotizador/cotizador.html
@@ -9,14 +9,14 @@
 <body>
   <header>
     <section class="logo">
-            <img src="../cotizador/imagenes/Logo.jpeg" alt="" class="imgLogo">
+            <img src="./cotizador/imagenes/Logo.jpeg" alt="" class="imgLogo">
         </section>
 
         <section class="middle-text" style="font-size: 20px;">
-            <section><a href="../index.html">Inicio</a></section>
-            <section><a href="../recomendaciones.html">Recomendaciones</a></section>
-            <section><a href="../contacto.html">¿Quieres que te contactemos?</a></section>
-            <section><a href="../catalogo.html">Servicios</a></section>
+            <section><a href="./index.html">Inicio</a></section>
+            <section><a href="./recomendaciones.html">Recomendaciones</a></section>
+            <section><a href="./contacto.html">¿Quieres que te contactemos?</a></section>
+            <section><a href="./catalogo.html">Servicios</a></section>
         </section>
 
         <section class="hamburger">
@@ -26,9 +26,9 @@
                     <span id="nombreUsuario">usuario</span>
                     <button class="cerrarSesion" id="btnCerrarSesion">Cerrar Sesión</button>
                 </section>
-                <a href="../catalogo.html">Catalogo de servicios</a>
-                <a href="../cotizador/cotizador.html">Cotización</a>
-                <a href="../citas.html">Agendamiento de citas</a>
+                <a href="./catalogo.html">Catalogo de servicios</a>
+                <a href="./cotizador/cotizador.html">Cotización</a>
+                <a href="./citas.html">Agendamiento de citas</a>
             </section>
         </section>
   </header>
