--- a/vistaCliente/contacto.html
+++ b/vistaCliente/contacto.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../contactos/contacto.css">
+    <link rel="stylesheet" href="./contactos/contacto.css">
     <script src="https://kit.fontawesome.com/1c2ac6f27a.js" crossorigin="anonymous"></script>
     <title>CONTROLES AMBIENTALES A & B S.A.S</title>
 </head>
 <body>
   <header>
     <section class="logo">
-        <img src="../contactos/imagenes/Logo.jpeg" alt="" class="imgLogo">
+        <img src="./contactos/imagenes/Logo.jpeg" alt="" class="imgLogo">
     </section>
 
     <section class="middle-text" style="font-size: 20px;">
-        <section><a href="../vistaCliente/index.html pagina web/index.html">Inicio</a></section>
-        <section><a href="../vistaCliente/recomendaciones.html">Recomendaciones</a></section>
-        <section><a href="../vistaCliente/contacto.html">¿Quieres que te contactemos?</a></section>
-        <section><a href="../vistaCliente/catalogo.html">Servicios</a></section>
+        <section><a href="./vistaCliente/index.html pagina web/index.html">Inicio</a></section>
+        <section><a href="./vistaCliente/recomendaciones.html">Recomendaciones</a></section>
+        <section><a href="./vistaCliente/contacto.html">¿Quieres que te contactemos?</a></section>
+        <section><a href="./vistaCliente/catalogo.html">Servicios</a></section>
     </section>
 
     <section class="hamburger">
@@ -27,9 +27,9 @@
                     <span id="nombreUsuario">usuario</span>
                     <button class="cerrarSesion" id="btnCerrarSesion">Cerrar Sesión</button>
                 </section>
-            <a href="../vistaCliente/catalogo.html">Catalogo de servicios</a>
-            <a href="../vistaCliente/cotizador/cotizador.html">Cotización</a>
-            <a href="../vistaCliente/citas.html">Agendamiento de citas</a>
+            <a href="./vistaCliente/catalogo.html">Catalogo de servicios</a>
+            <a href="./vistaCliente/cotizador/cotizador.html">Cotización</a>
+            <a href="./vistaCliente/citas.html">Agendamiento de citas</a>
         </section>
     </section>
 </header>
@@ -74,7 +74,7 @@
                     </section>
                 </section>
                 <section>
-                  <img src="../contactos/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
+                  <img src="./contactos/imagenes/Logo.jpeg" alt="Logo" class="imgLogo">
                 </section>
               </section>
         </section>
@@ -84,7 +84,7 @@
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <script src="../contactos/contacto.js"></script>
-    <script type="module" src="../login y registro/main.js"></script>
+    <script src="./contactos/contacto.js"></script>
+    <script type="module" src="./login y registro/main.js"></script>
 </body>
 </html>
