--- a/vistaPublica/contacto.html
+++ b/vistaPublica/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../contactos/contacto.css">
+    <link rel="stylesheet" href="./contactos/contacto.css">
     <script src="https://kit.fontawesome.com/1c2ac6f27a.js" crossorigin="anonymous"></script>
     <title>CONTROLES AMBIENTALES A & B S.A.S</title>
 </head>
