--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </section>
 
         <section class="middle-text" style="font-size: 20px;">
-            <section><a href="./vistaPublica/index.html">Inicio</a></section>
+            <section><a href="./index.html">Inicio</a></section>
             <section><a href="./vistaPublica/recomendaciones.html">Recomendaciones</a></section>
             <section><a href="./vistaPublica/contacto.html">¿Quieres que te contactemos?</a></section>
             <section><a href="./vistaPublica/catalogo.html">Servicios</a></section>
